Fix: Fixing z-index progressBar

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,7 +14,7 @@
 
 .progress {
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   width: 0%;
   height: 0.3125rem;
   background-color: rgba(8, 166, 228, 1);
